generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextIndex", "fullTextSearch", "metrics", "postgresqlExtensions", "tracing", "views"]
  binaryTargets   = ["native", "linux-musl-openssl-3.0.x", "linux-musl-arm64-openssl-3.0.x", "rhel-openssl-3.0.x", "debian-openssl-3.0.x"]
}

generator dbml {
  provider            = "prisma-dbml-generator"
  projectDatabaseType = "PostgreSQL"
  projectNote         = "Shooper Travel NMB"
  outputName          = "shooperTravelNMB-server.dbml"
  projectName         = "Shooper Travel NMB"
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [citext(schema: "public"), pgcrypto, uuid_ossp(map: "uuid-ossp", schema: "public")]
}

enum Role {
  passenger
  driver
}

enum RideStatus {
  pending
  confirmed
  completed
}

model User {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  email     String    @unique
  password  String
  role      Role
  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
  driver    Driver?
  ride      Ride[]
  review    Review[]
}

model Driver {
  id          String  @id @db.Uuid
  description String
  vehicle     String
  avgRating   Float
  tax         Decimal
  minKm       Int
  user        User    @relation(fields: [id], references: [id])
  ride        Ride[]
}

model Ride {
  id          String     @id @default(uuid()) @db.Uuid
  passengerId String     @db.Uuid
  driverId    String     @db.Uuid
  value       Float
  status      RideStatus
  origin      String
  destination String
  duration    String
  distance    Int
  createdAt   DateTime   @default(now())
  updatedAt   DateTime?  @updatedAt
  passenger   User       @relation(fields: [passengerId], references: [id])
  driver      Driver     @relation(fields: [driverId], references: [id])
  review      Review[]
}

model Review {
  id         String  @id @default(uuid()) @db.Uuid
  rating     Float
  comment    String?
  userId     String  @db.Uuid
  rideId     String  @db.Uuid
  authorRole Role
  ride       Ride    @relation(fields: [rideId], references: [id])
  user       User    @relation(fields: [userId], references: [id])
}
