//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Shooper Travel NMB" {
  database_type: 'PostgreSQL'
  Note: 'Shooper Travel NMB'
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role Role [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  driver Driver
  ride Ride [not null]
  review Review [not null]
}

Table Driver {
  id String [pk]
  description String [not null]
  vehicle String [not null]
  avgRating Float [not null]
  tax Decimal [not null]
  minKm Int [not null]
  user User [not null]
  ride Ride [not null]
}

Table Ride {
  id String [pk]
  passengerId String [not null]
  driverId String [not null]
  value Float [not null]
  status RideStatus [not null]
  origin String [not null]
  destination String [not null]
  duration String [not null]
  distance Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  passenger User [not null]
  driver Driver [not null]
  review Review [not null]
}

Table Review {
  id String [pk]
  rating Float [not null]
  comment String
  userId String [not null]
  rideId String [not null]
  authorRole Role [not null]
  ride Ride [not null]
  user User [not null]
}

Enum Role {
  passenger
  driver
}

Enum RideStatus {
  pending
  confirmed
  completed
}

Ref: Driver.id - User.id

Ref: Ride.passengerId > User.id

Ref: Ride.driverId > Driver.id

Ref: Review.rideId > Ride.id

Ref: Review.userId > User.id